# embed_staticfile.rs

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
